--- a/templates/mainsite/quiz_6.html
+++ b/templates/mainsite/quiz_6.html
@@ -231,7 +231,7 @@
             <p class="lead">{{question_text }}</p>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon">Your translation:</span>
+                  <span class="input-group-text" id="basic-addon">Answer</span>
                 </div>
                 <input type="text" class="form-control" id="translationInput" aria-label="Translation" aria-describedby="basic-addon">
                 <!-- Initially, no append span for icon -->
