10/04 updated changes (morning)

--- a/templates/login/signin.html
+++ b/templates/login/signin.html
@@ -17,8 +17,8 @@
       <div class="card">
         <div class="card-body">
           <div class="text-center mb-4">
-            <img src="{% static 'portu_flag_pic.png' %}" class="mb-4" alt="Portuguese Flag" style="width: 100px;"> <!-- Adjust size as needed -->
-            <h1 class="h3 mb-3 font-weight-normal">PortuguesePro</h1>
+            <img src="{% static 'Logo1.png' %}" class="mb-4" alt="Portuguese Flag" style="width: 200px; height: 150px;"> <!-- Adjust size as needed -->
+            <h1 class="h3 mb-3 font-weight-normal"><b><span class="text-green" style="color:green">Portu</span><span class="text-red" style="color:red">Pro</span></b></h1>
             <p>A Portuguese language learning website to help you sharpen and develop your Portuguese. Enter your login details below.</p>
           </div>
           
