--- a/templates/mainsite/quiz_2.html
+++ b/templates/mainsite/quiz_2.html
@@ -147,7 +147,11 @@
         <div class="progress" style="width: 30%;"> 
           <div class="progress-bar" style="width:70%"></div>
         </div>
-        <b>2 of 12</b> 
+        {% if not repeated_question %}
+        <b>{{question_id}} of 11</b>
+      {% else %}
+        <b>Repeated Question</b>
+      {% endif %} 
         <a href="/home" class="btn btn-light big-close" style="border: solid 1px #000000; margin-right: 10px;">&times;</a>
       </div>
       <hr> 
@@ -200,6 +204,7 @@
     // });
 
     $(document).ready(function(){
+      $('#submitButton').prop('disabled', true);
     $('#submitButton').click(function(e){
         e.preventDefault(); // Prevents the default action of the submit button if it's inside a form
         $.ajax({
@@ -300,6 +305,7 @@
                 // messageElement.textContent = 'Success: ' + data.message;
                 messageElement.textContent = 'Success';
                 messageElement.style.textAlign = 'center';
+                $('#submitButton').prop('disabled', false);
             } else {
                 messageElement.className = 'alert alert-danger'; // Use Bootstrap danger class for errors
                 messageElement.textContent = 'Failure';
