--- a/templates/mainsite/quiz_1.html
+++ b/templates/mainsite/quiz_1.html
@@ -183,7 +183,11 @@ input[type="radio"]:checked + img {
         <div class="progress" style="width: 30%;"> 
           <div class="progress-bar" role="progressbar" aria-valuenow="25" style="width:70%">25%</div>
         </div>
-        <b>{{question_id}} of 12</b> 
+        {% if not repeated_question %}
+          <b>{{question_id}} of 11</b>
+        {% else %}
+          <b>Repeated Question</b>
+        {% endif %} 
         <a href="/home" class="btn btn-light big-close" style="border: solid 1px #000000; margin-right: 10px;">&times;</a>
       </div>
       <hr>
